# ssufid

./: .gitignore  Cargo.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/analyze-report/: action.yml
.github/workflows/: daemon.yml  dry-run.yml  lint.yml  publish.yml  test.yml
lexical-parser/: bundle.ts  deno.json
lexical-parser/src/: main.test.ts  main.ts
lexical-parser/src/nodes/: HorizontalRuleNode.tsx  ImageNode.tsx  InlineImageNode.tsx
plugins/aix/: Cargo.toml
plugins/aix/src/: lib.rs
plugins/biz/: Cargo.toml
plugins/biz/src/: lib.rs
plugins/chemeng/: Cargo.toml
plugins/chemeng/src/: lib.rs
plugins/common/: Cargo.toml
plugins/common/src/: lib.rs
plugins/common/src/common/: gnuboard.rs  mod.rs  wordpress.rs
plugins/common/src/common/gnuboard/: metadata.rs  mod.rs
plugins/common/src/common/wordpress/: metadata.rs  mod.rs
plugins/common/src/sites/: bioinfo.rs  cse.rs  docs.rs  eco.rs  mgmt.rs  mod.rs  sec.rs  soar.rs  sw.rs
plugins/common/src/sites/cse/: bachelor.rs  employment.rs  graduate.rs
plugins/common/src/sites/sw/: bachelor.rs  graduate.rs  mod.rs
plugins/ee/: Cargo.toml
plugins/ee/src/: lib.rs
plugins/infocom/: Cargo.toml
plugins/infocom/src/: lib.rs
plugins/inso/: Cargo.toml
plugins/inso/src/: lib.rs
plugins/it_sites/: Cargo.toml
plugins/it_sites/src/: lib.rs  sec.rs
plugins/it_sites/src/common/: it_crawler.rs  mod.rs
plugins/it_sites/src/cse/: bachelor.rs  employment.rs  graduate.rs
plugins/it_sites/src/sw/: bachelor.rs  graduate.rs
plugins/lawyer/: Cargo.toml
plugins/lawyer/src/: lib.rs
plugins/lifelongedu/: Cargo.toml
plugins/lifelongedu/src/: lib.rs
plugins/materials/: Cargo.toml
plugins/materials/src/: lib.rs
plugins/me/: Cargo.toml
plugins/me/src/: lib.rs
plugins/media/: Cargo.toml
plugins/media/src/: lib.rs
plugins/mediamba/: Cargo.toml
plugins/mediamba/lexical-parser/: bundle.ts  deno.json
plugins/mediamba/lexical-parser/src/: main.test.ts  main.ts
plugins/mediamba/src/: lib.rs
plugins/oasis/: Cargo.toml
plugins/oasis/src/: lib.rs
plugins/ssfilm/: Cargo.toml
plugins/ssfilm/src/: lib.rs
plugins/ssu-academic-calendar/: Cargo.toml
plugins/ssu-academic-calendar/src/: lib.rs
plugins/ssucatch/: Cargo.toml
plugins/ssucatch/src/: lib.rs
plugins/ssudorm/: Cargo.toml
plugins/ssudorm/src/: lib.rs
plugins/ssufid_aix/: Cargo.toml
plugins/ssufid_aix/src/: lib.rs
plugins/ssufid_infocom/src/: lib.rs
plugins/ssufid_inso/src/: lib.rs
plugins/ssufid_lawyer/: Cargo.toml
plugins/ssufid_lawyer/src/: lib.rs
plugins/ssufid_oasis/: Cargo.toml
plugins/ssufid_oasis/src/: lib.rs
plugins/ssufid_stat/: Cargo.toml
plugins/ssufid_stat/src/: lib.rs
plugins/ssupath/: Cargo.toml
plugins/ssupath/src/: lib.rs  model.rs  sso.rs  utils.rs
plugins/ssupath/src/model/: table.rs
plugins/startup/: Cargo.toml
plugins/startup/src/: lib.rs
plugins/stu/: Cargo.toml
plugins/stu/src/: lib.rs
plugins/study/: Cargo.toml
plugins/study/src/: lib.rs  model.rs
src/: common.rs  core.rs  error.rs  lib.rs  main.rs
src/core/: mod.rs  rss.rs
src/plugins/: cse.rs  example.rs  media.rs  mod.rs  sec.rs  ssu_catch.rs  ssu_catch_plugin.rs
src/plugins/common/: it_crawler.rs  mod.rs
src/plugins/cse/: bachelor.rs  employment.rs  graduate.rs  mod.rs
src/plugins/ssu_path/: mod.rs  model.rs  sso.rs  utils.rs
src/plugins/ssu_path/model/: table.rs
src/plugins/sw/: bachelor.rs  employment.rs  graduate.rs  mod.rs
