[workspace]
resolver = "3"
members = ["packages/*", "plugins/*"]

[workspace.package]
edition = "2024"
description = "SSU Announcement Crawler for Everyone"
license = "MIT"
authors = [
  "Hyomin Koo <me@eatsteak.dev>",
  "이중곤 <2wndrhs@gmail.com>",
  "Jung Haesung <harryjung1001@gmail.com>",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
reqwest = { version = "0.12.0", features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
] }
scraper = "0.23.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
futures = "0.3.31"
tracing = "0.1.41"
mime_guess = "2.0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

ssufid = { path = "packages/ssufid", features = ["rss"] }

ssufid_common = { path = "plugins/common" }
ssufid_media = { path = "plugins/media" }
ssufid_mediamba = { path = "plugins/mediamba" }
ssufid_ssucatch = { path = "plugins/ssucatch" }
ssufid_ssupath = { path = "plugins/ssupath" }
ssufid_lifelongedu = { path = "plugins/lifelongedu" }
ssufid_chemeng = { path = "plugins/chemeng" }
