[package]
name = "aix"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Your Name <you@example.com>"] # Replace with actual author info if available, otherwise this is fine.
description = "Ssufid plugin for SSU AI융합학부 notices"

[dependencies]
ssufid = { path = "../../packages/ssufid" } # Adjust path as necessary based on actual project structure
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
futures = "0.3"
tracing = "0.1"
log = "0.4" # Added log

[lib]
crate-type = ["cdylib", "rlib"]
