[package]
name = "ssufid_inso"
version = "0.1.0"
edition.workspace = true

[dependencies]
ssufid = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scraper = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
time = { workspace = true, features = ["macros", "formatting", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
