[package]
name = "ssufid_lawyer"
version = "0.1.0"
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ssufid = { workspace = true }

reqwest = { workspace = true, features = ["json"] }
scraper = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
time = { workspace = true, features = ["macros", "formatting", "parsing"] }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
