[package]
name = "ssufid_lifelongedu"
version = "0.1.0"
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ssufid = { workspace = true }
reqwest = { workspace = true, features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
] }
scraper = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
  "serde",
  "macros",
  "formatting",
  "parsing",
] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
