[package]
name = "ssufid_me"
version = "0.1.0"
description.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ssufid = { workspace = true }
reqwest = { workspace = true, features = ["json"] } # rustls-tls is default in workspace from root
scraper = { workspace = true }
tokio = { workspace = true } # "full" is already specified in workspace.dependencies.tokio
time = { workspace = true, features = ["macros", "parsing"] }
thiserror = { workspace = true }
futures = { workspace = true }
url = { workspace = true, features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
# Add any development-time dependencies here, e.g., for testing
# For example:
# wiremock = "0.6"
# serde_json = { workspace = true }
