[package]
name = "ssufid_me"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
scraper = "0.18" # Specific version for this plugin
ssufid = { path = "../../packages/ssufid" }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros", "serde"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
